fix: remove gap on right side of benefits section

--- a/src/pages/site/Home/Home.scss
+++ b/src/pages/site/Home/Home.scss
@@ -95,11 +95,13 @@
     text-align: center;
     background-color: $brand-primary-color;
     color: $light-text-color !important;
+    width: 100%;
     
     .container {
         max-width: 1200px;
-        margin: 0;
-        padding: 3rem 2rem;
+        margin: 0 auto;
+        padding: 3rem 0;
+        width: 100%;
     }
     
     &__title {
@@ -122,7 +124,8 @@
         gap: 3rem;
         max-width: 1200px;
         margin: 0 auto;
-        padding-bottom: 2rem;
+        padding: 0 2rem 2rem 2rem;
+        width: 100%;
     }
 
     &__item {
